--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pandas==2.1.1
-pymongo==5.3.0
-python-dotenv==1.1.1
-Flask==2.3.5
-Flask-Cors==3.2.3
+pandas
+pymongo
+python-dotenv
+Flask
+Flask-Cors
+bcrypt
+getpass
